@@ -12,7 +12,6 @@
 const int keymap[][2] = {
   {SDLK_RETURN, SB_KEY_ENTER},
   {SDLK_ESCAPE, SB_KEY_ESCAPE},
-  {SDLK_KP_PERIOD, '.'},
   {SDLK_KP_ENTER, SB_KEY_ENTER},
   {SDLK_TAB, SB_KEY_TAB},
   {SDLK_BACKSPACE, SB_KEY_BACKSPACE},
